--- a/index.html
+++ b/index.html
@@ -277,6 +277,7 @@ section.visible {
                color: transparent;">
           Hi, I'm Tumwiine <br> Innocent
         </h1>
+      <h2>How can I help you today?</h2>
         <p>
             A passionate Front-End Developer & Graphic Designer <br>
             crafting beautiful web experiences.
