--- a/index.html
+++ b/index.html
@@ -279,7 +279,12 @@ section.visible {
         </h1>
       <h2>How can I help you today?</h2>
         <p>
-            A passionate Front-End Developer & Graphic Designer <br>
+            I am passionate <p
+                              style="background: linear-gradient(90deg, #00c6ff 0%, #7f2ff0 100%);
+               -webkit-background-clip: text;
+               -webkit-text-fill-color: transparent;
+               background-clip: text;
+               color: transparent;">Front-End Developer & Graphic Designer</p> <br>
             crafting beautiful web experiences.
         </p>
         <ul style="margin: 18px 0 24px 18px; font-size: 1.08rem; color: #bffcff; list-style: disc;">
