--- a/index.html
+++ b/index.html
@@ -275,16 +275,15 @@ section.visible {
                -webkit-text-fill-color: transparent;
                background-clip: text;
                color: transparent;">
-          Hi, I'm Tumwiine <br> Innocent
+          Hi, I'm Tumwiine <br> Innocent <br> UI/UX expert
         </h1>
       <h2>How can I help you today?</h2>
-        <p>
-            I am passionate <p
-                              style="background: linear-gradient(90deg, #00c6ff 0%, #7f2ff0 100%);
+        <p  style="background: linear-gradient(90deg, #00c6ff 0%, #7f2ff0 100%);
                -webkit-background-clip: text;
                -webkit-text-fill-color: transparent;
                background-clip: text;
-               color: transparent;">Front-End Developer & Graphic Designer</p> <br>
+               color: transparent;">
+            I am passionate Front-End Developer & Graphic Designer <br>
             crafting beautiful web experiences.
         </p>
         <ul style="margin: 18px 0 24px 18px; font-size: 1.08rem; color: #bffcff; list-style: disc;">
@@ -299,6 +298,16 @@ section.visible {
         <div class="buttons">
             <a href="#projects">View Projects</a>
             <a href="#contact">Contact Me</a>
+<a href="CV.docx" 
+   download 
+   class="inline-flex items-center px-5 py-3 rounded-xl border border-purple-600 text-purple-400 hover:bg-purple-600 hover:text-white transition duration-300 ease-in-out font-semibold shadow-lg">
+  Download CV (Word)
+  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.8" stroke="currentColor" class="w-5 h-5 ml-2">
+    <path stroke-linecap="round" stroke-linejoin="round" d="M12 4v12m0 0l-3-3m3 3l3-3m-6 6h6" />
+  </svg>
+</a>
+
+
         </div>
     </div>
 
@@ -346,9 +355,14 @@ section.visible {
     <div class="about-content">
       <h2>More About Me</h2>
       <p class="bio">
-        I’m a passionate designer & developer who enjoys turning ideas into digital reality.
-        Starting from graphic design, I slowly transitioned into web development and now focus
-        on building beautiful, responsive, and smart web applications that make a difference.
+   I'm Tumwiine Innocent, a passionate and self-driven graphics designer and front-end 
+        web developer based in Kampala, Uganda. With a deep love for creativity and clean,
+        user-focused design, I specialize in building responsive websites, modern UI interfaces,
+        and impactful branding materials like logos, banners, and business cards. Over the years, 
+        I’ve worked with schools, startups, and agencies—transforming ideas into functional,
+        visually striking experiences. When I’m not coding or designing, I’m exploring new tools to 
+        sharpen my skills and bring bold, original concepts to life.
+        My mission is simple: design with purpose, develop with precision.
       </p>
 
       <h3>Education Background</h3>
@@ -359,11 +373,11 @@ section.visible {
         </div>
         <div class="edu-item">
           <h4>O-Level / A-Level</h4>
-          <p>St. Lawrence Secondary School</p>
+          <p>Ronimac Secondary School Buyala</p>
         </div>
         <div class="edu-item">
-          <h4>Computer Science (Ongoing)</h4>
-          <p>ISBAT UNIVERSITY</p>
+          <h4>Computer Science </h4>
+          <p>YMCA  UNIVERSITY</p>
         </div>
         <div class="edu-item">
           <h4>Online Courses</h4>
