--- a/index.html
+++ b/index.html
@@ -298,14 +298,7 @@ section.visible {
         <div class="buttons">
             <a href="#projects">View Projects</a>
             <a href="#contact">Contact Me</a>
-<a href="CV.docx" 
-   download 
-   class="inline-flex items-center px-5 py-3 rounded-xl border border-purple-600 text-purple-400 hover:bg-purple-600 hover:text-white transition duration-300 ease-in-out font-semibold shadow-lg">
-  Download CV (Word)
-  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.8" stroke="currentColor" class="w-5 h-5 ml-2">
-    <path stroke-linecap="round" stroke-linejoin="round" d="M12 4v12m0 0l-3-3m3 3l3-3m-6 6h6" />
-  </svg>
-</a>
+<a href="CV.docx"  > Download CV </a>
 
 
         </div>
